--- a/src/Web.config
+++ b/src/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="Your connection string" providerName="System.Data.SqlClient" />
+    <add name="DatabaseContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\Aziz\Documents\Visual Studio 2015\Projects\News\News\App_Data\Database.mdf;Initial Catalog=aspnet-News-20151121095846;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
